--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
-project(sdl_program)
+project(stormClacker)
 include_directories("/usr/include/SDL2/")
 include_directories("./inc/")
 file(GLOB SOURCES "src/*.c")
@@ -12,6 +12,6 @@ string(STRIP ${SDL_LDFLAGS} SDL_LDFLAGS)
 string(STRIP ${SDL_CFLAGS} SDL_CFLAGS)
 #message("LD ${SDL_LDFLAGS}")
 #message("C ${SDL_CFLAGS}")
-add_executable(sdl_program ${SOURCES})
-target_compile_options(sdl_program PRIVATE ${SDL_CFLAGS}) 
-target_link_libraries(sdl_program PRIVATE ${SDL_LDFLAGS})
+add_executable(stormClacker ${SOURCES})
+target_compile_options(stormClacker PRIVATE ${SDL_CFLAGS}) 
+target_link_libraries(stormClacker PRIVATE ${SDL_LDFLAGS})
