Initialized all wind loops
Makes three variants of the leaves making loops in the wind.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,4 @@ string(STRIP ${SDL_CFLAGS} SDL_CFLAGS)
 #message("C ${SDL_CFLAGS}")
 add_executable(stormClacker ${SOURCES})
 target_compile_options(stormClacker PRIVATE ${SDL_CFLAGS}) 
-target_link_libraries(stormClacker PRIVATE ${SDL_LDFLAGS})
+target_link_libraries(stormClacker PRIVATE ${SDL_LDFLAGS} -lm)
