Make sure STRIP gets two args

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ execute_process(COMMAND sdl2-config --cflags OUTPUT_VARIABLE SDL_CFLAGS)
 execute_process(COMMAND sdl2-config --libs OUTPUT_VARIABLE SDL_LDFLAGS)
 #message("LD ${SDL_LDFLAGS}")
 #message("C ${SDL_CFLAGS}")
-string(STRIP ${SDL_LDFLAGS} SDL_LDFLAGS)
-string(STRIP ${SDL_CFLAGS} SDL_CFLAGS)
+string(STRIP " ${SDL_LDFLAGS}" SDL_LDFLAGS)
+string(STRIP " ${SDL_CFLAGS}" SDL_CFLAGS)
 #message("LD ${SDL_LDFLAGS}")
 #message("C ${SDL_CFLAGS}")
 add_executable(stormClacker ${SOURCES})
